    flag on Column.   The truncation only takes
    place with the auto-generated name, not one
    that is user-defined (an error would be 
    raised instead), and the truncation scheme 
    itself is now based on a fragment of an md5
    hash of the identifier name, so that multiple
    indexes on columns with similar names still
    have unique names.  [ticket:1855]

- mssql
  - Fixed "default schema" query to work with
    pymssql backend.

- examples
  - The beaker_caching example has been reorgnized
    such that the Session, cache manager, 
    declarative_base are part of environment, and
    custom cache code is portable and now within
    "caching_query.py".  This allows the example to 
    be easier to "drop in" to existing projects.
    
0.6.3
=====
- orm
  - Removed errant many-to-many load in unitofwork 
    which triggered unnecessarily on expired/unloaded 
    collections. This load now takes place only if 
    passive_updates is False and the parent primary 
    key has changed, or if passive_deletes is False 
    and a delete of the parent has occurred.
    [ticket:1845]

  - Column-entities (i.e. query(Foo.id)) copy their 
    state more fully when queries are derived from 
    themselves + a selectable (i.e. from_self(), 
    union(), etc.), so that join() and such have the 
    correct state to work from.  [ticket:1853]
    
  - Fixed bug where Query.join() would fail if
    querying a non-ORM column then joining without
    an on clause when a FROM clause is already
    present, now raises a checked exception the 
    same way it does when the clause is not
    present.  [ticket:1853]

  - Improved the check for an "unmapped class", 
    including the case where the superclass is mapped
    but the subclass is not.  Any attempts to access
    cls._sa_class_manager.mapper now raise 
    UnmappedClassError().  [ticket:1142]
    
  - Added "column_descriptions" accessor to Query,
    returns a list of dictionaries containing