@@ -1607,8 +1607,10 @@ class MySQLDialect(default.DefaultDialect):
     
     name = 'mysql'
     supports_alter = True
+    
     # identifiers are 64, however aliases can be 255...
     max_identifier_length = 255
+    max_index_name_length = 64
     
     supports_native_enum = True
     
